[Feature] Add Docker support for ManiSkill with headless and X11 configurations - Added utility functions for running evaluations and demos in the ManiSkill environment.

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ imgui.ini
 # but can be excluded explicitly
 /tmp
 /data
+.maniskill
 /demos
 /videos
 /examples/benchmarking/videos
@@ -44,3 +45,6 @@ imgui.ini
 # testing
 .coverage*
 htmlcov/
+
+eval_logs/
+demo_log/
